商店信息可动态显示

--- a/src/main/resources/templates/user/ChangePassword.html
+++ b/src/main/resources/templates/user/ChangePassword.html
@@ -451,7 +451,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="/" class="nav-link">
+                        <a href="/index" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 商品页面
