--- a/src/main/resources/templates/user/BalanceRecharge.html
+++ b/src/main/resources/templates/user/BalanceRecharge.html
@@ -543,14 +543,6 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="/user/MyProfile" class="nav-link">
-                            <i class="nav-icon fas fa-copy"></i>
-                            <p>
-                                我的主页
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item has-treeview">
                         <a href="/index" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
@@ -571,6 +563,22 @@
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 浏览记录
+                            </p>
+                        </a>
+                    </li>
+                    <li class="nav-item has-treeview" id="myShop">
+                        <a href="/user/MyProfile" class="nav-link">
+                            <i class="nav-icon fas fa-copy"></i>
+                            <p>
+                                我的商店
+                            </p>
+                        </a>
+                    </li>
+                    <li class="nav-item has-treeview" id="shopManagement">
+                        <a href="/user/MyProfile" class="nav-link">
+                            <i class="nav-icon fas fa-copy"></i>
+                            <p>
+                                管理商店
                             </p>
                         </a>
                     </li>
@@ -636,13 +644,13 @@
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-    <footer class="main-footer">
-        <div class="float-right d-none d-sm-block">
-            <b>Version</b> 3.0.5
-        </div>
-        <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
-        reserved.
-    </footer>
+    <!--<footer class="main-footer">-->
+        <!--<div class="float-right d-none d-sm-block">-->
+            <!--<b>Version</b> 3.0.5-->
+        <!--</div>-->
+        <!--<strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights-->
+        <!--reserved.-->
+    <!--</footer>-->
 
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
