完善了识别用户

--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -575,6 +575,7 @@
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
 <script src="/PayJs/Balance.js"></script>
 <script src="/PayJs/PayOneJs.js"></script>
+<script src="/PayJs/PayListJs.js"></script>
 <!-- Select2 -->
 <script src="/AdminLTE-3.0.5/plugins/select2/js/select2.full.min.js"></script>
 <!-- Bootstrap4 Duallistbox -->
