--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -412,7 +412,7 @@
                                 单 价
                             </th>
                             <th style="width: 20%"class="project-actions text-right">
-                                <a id="paylist" class="btn btn-warning  btn-sm" href="/pay" value="" onclick="paylist()">
+                                <a id="paylistid" class="btn btn-warning  btn-sm" href="#" value="" onclick="paylist()">
                                     <img  src="/img/yen-2x.png"><img>
                                     结算
                                 </a>
@@ -574,8 +574,24 @@
         $('#bj'+id).attr('href',str);
     }
     function paylist() {
-
-
+        var size=$('#paylistid').val();
+        //console.log(size);
+        var arr=new Array();
+        var arrq=new Array();
+        var checkboxs = document.getElementsByName('cartitem');
+        var qinputs = document.getElementsByName('qinput');
+        for(var i=0;i<checkboxs.length;i++){
+            if(checkboxs[i].checked){
+                arr.push(checkboxs[i].value);
+                arrq.push(qinputs[i].value);
+                console.log(checkboxs[i].value);
+            }
+        }
+        /*var str=arr.toString();
+        var strr='/paylist?list=';
+        strr+=str;
+        console.log(strr);*/
+        $('#paylistid').attr("href","/paylist?list="+arr+"&num="+arrq);
     }
 </script>
 </body>
