修改了登录的逻辑

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
         <div class="collapse navbar-collapse" id="nav-open-btn">
           <ul class="nav">
 
-            <div class="logo"> <a href="/"><img  style="height: 60px; width: 60px" src="img/logo.png" alt="" ></a> </div>
+            <div class="logo"> <a href="/index"><img  style="height: 60px; width: 60px" src="img/logo.png" alt="" ></a> </div>
             <div class="h2"style="margin-top: 20px">Snail Go</div>
 
           </ul>
@@ -69,7 +69,7 @@
 
         <!-- NAV RIGHT -->
         <div class="nav-right">
-          <a href="/user/MyInformation"><i class="fa fa-user"></i> <strong>个人中心</strong> </a>
+          <a href="/user/MyInformation"><i class="fa fa-user"></i> <span id="login"></span><strong><span id="test"></span></strong> </a>
           <a href="/"><i class="fa fa-comment"></i><strong>消息</strong></a>
           <a href="/cart"> <i class="fa fa-shopping-cart"></i></a>
         </div>
@@ -1498,13 +1498,95 @@
   <!-- GO TO TOP End --> 
 </div>
 <!-- End Page Wrapper -->
+<script src="/js/vendors/jquery/jquery.min.js"></script>
 <script type="text/javascript">
   $(document).ready(function () {
     bsCustomFileInput.init();
+    if($.cookie("username")==null){
+
+    };
+  });
+  function getCookie(c_name) {
+    if (document.cookie.length > 0) {
+      c_start = document.cookie.indexOf(c_name + "=");
+      if (c_start != -1) {
+        c_start = c_start + c_name.length + 1;
+        c_end = document.cookie.indexOf(";", c_start);
+        if (c_end == -1) c_end = document.cookie.length;
+        return unescape(document.cookie.substring(c_start, c_end));
+      }
+    }
+    return "";
+  }
+  a=getCookie("username");
+  c_start=document.cookie.indexOf("username=");
+  console.log(c_start)
+  if(c_start == -1){
+    $("#login").append('<a href="/loginPage" target="_blank">登录/注册</a>');
+  }
+  else{
+    $("#login").hide();
+  }
+
+
+  $.ajax({
+    type: "GET",
+    url: "/user/information",
+    // data:JSON.stringify(dataObj) ,
+    // data:{
+    //     userEmail:userEmail
+    // },
+    contentType: "application/json; charset=utf-8",
+    // dataType: "json",
+    success: function (res, ifo) {
+      binaryFile = res.UserInfo[0].userImg;
+      console.log("返回图片"+res.UserInfo[0].userImg);
+      $('#preview').attr('src',res.UserInfo[0].userImg);
+      $("#emailInput").attr('value',res.UserInfo[0].userAdmin);
+      // $("#passwordInput").attr('value',res.UserInfo[0].userPassword);
+      $("#userNameindex").attr('value',res.UserInfo[0].userName);
+      $("#test").html(res.UserInfo[0].userName);
+      console.log(Number(res.UserInfo[0].usersex))
+      switch (Number(res.UserInfo[0].usersex)) {
+        case 0:
+          $("#sex").val('保密');
+          break;
+        case 1:
+          $("#sex").val('男');
+          break;
+        case 2:
+          $("#sex").val('女');
+          break;
+        default:
+          break;
+      }
+      $("#birthDate").attr('value',res.UserInfo[0].userBirthdate);
+      $("#phoneNumber").attr('value',res.UserInfo[0].userPhonenumber);
+      $("#introduction").attr('value',res.UserInfo[0].userIntroduction);
+
+      $("#balance").html(res.UserFinance[0].balance);
+      $("#level").html(res.UserLevel[0].level);
+      $("#point").html(res.UserLevel[0].points);
+      switch (res.UserInfo[0].userTag) {
+        case false:
+          $("#identity").html("买家");
+          break;
+        case true:
+          $("#identity").html("买家");
+          break;
+        default:
+          break;
+      }
+      console.log(res);
+    },
+    fali:function () {
+      console.log("错误")
+    },
+    error:function () {
+      console.log("报错")
+    }
   });
 
-  var decodedCookie = decodeURIComponent(document.cookie);
-  console.log(decodedCookie.substring(decodedCookie.indexOf('=')+1));
 
 </script>
 <script src="/MyInfoJs/MyInfo.js"></script>
