--- a/src/main/resources/templates/searcherror.html
+++ b/src/main/resources/templates/searcherror.html
@@ -59,9 +59,8 @@
         </ul>
       </div>
 
-      <!-- NAV RIGHT -->
       <div class="nav-right">
-        <a href="/user/MyInformation"><i class="fa fa-user"></i> <strong>个人中心</strong> </a>
+        <a href="/user/MyInformation"><i class="fa fa-user"></i> <span id="login"></span><strong><span id="test"></span></strong> </a>
         <a href="/"><i class="fa fa-comment"></i><strong>消息</strong></a>
         <a href="/cart"> <i class="fa fa-shopping-cart"></i></a>
       </div>
