--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -69,7 +69,7 @@
 
       <!-- NAV RIGHT -->
       <div class="nav-right">
-        <a href="/user/MyInformation"><i class="fa fa-user"></i> <strong><span id="test"></span></strong> </a>
+        <a href="/user/MyInformation"><i class="fa fa-user"></i> <span id="login"></span><strong><span id="test"></span></strong> </a>
         <a href="/"><i class="fa fa-comment"></i><strong>消息</strong></a>
         <a href="/cart"> <i class="fa fa-shopping-cart"></i></a>
       </div>
@@ -132,8 +132,8 @@
   <div class="linking">
     <div class="container">
       <ol class="breadcrumb">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Cell Phones & Accessories</a></li>
+        <li><a href="/">主页</a></li>
+        <li><span class="tags" th:text="${goodsdetails[0].goodsTag}"></span></li>
         <li class="active"><span class="tag" th:text="${goodsdetails[0].goodsName}"></span></li>
       </ol>
     </div>
@@ -147,157 +147,10 @@
       <div class="container">
         <div class="row"> 
           
-          <!-- Shop Side Bar -->
-          <div class="col-md-3">
-            <div class="shop-side-bar"> 
-              
-              <!-- Categories -->
-              <h6>Categories</h6>
-              <div class="checkbox checkbox-primary">
-                <ul>
-                  <li>
-                    <input id="cate1" class="styled" type="checkbox" >
-                    <label for="cate1"> Home Audio & Theater </label>
-                  </li>
-                  <li>
-                    <input id="cate2" class="styled" type="checkbox" >
-                    <label for="cate2"> TV & Video</label>
-                  </li>
-                  <li>
-                    <input id="cate3" class="styled" type="checkbox" >
-                    <label for="cate3"> Camera, Photo & Video</label>
-                  </li>
-                  <li>
-                    <input id="cate4" class="styled" type="checkbox" >
-                    <label for="cate4"> Cell Phones & Accessories</label>
-                  </li>
-                  <li>
-                    <input id="cate5" class="styled" type="checkbox" >
-                    <label for="cate5"> Headphones</label>
-                  </li>
-                  <li>
-                    <input id="cate6" class="styled" type="checkbox" >
-                    <label for="cate6"> Video Games</label>
-                  </li>
-                  <li>
-                    <input id="cate7" class="styled" type="checkbox" >
-                    <label for="cate7"> Bluetooth & Wireless Speakers</label>
-                  </li>
-                  <li>
-                    <input id="cate8" class="styled" type="checkbox" >
-                    <label for="cate8"> Gaming Console</label>
-                  </li>
-                </ul>
-              </div>
-              
-              <!-- Categories -->
-              <h6>Price</h6>
-              <!-- PRICE -->
-              <div class="cost-price-content">
-                <div id="price-range" class="price-range"></div>
-                <span id="price-min" class="price-min">20</span> <span id="price-max" class="price-max">80</span> <a href="#." class="btn-round" >Filter</a> </div>
-              
-              <!-- Featured Brands -->
-              <h6>Featured Brands</h6>
-              <div class="checkbox checkbox-primary">
-                <ul>
-                  <li>
-                    <input id="brand1" class="styled" type="checkbox" >
-                    <label for="brand1"> Apple <span>(217)</span> </label>
-                  </li>
-                  <li>
-                    <input id="brand2" class="styled" type="checkbox" >
-                    <label for="brand2"> Acer <span>(79)</span> </label>
-                  </li>
-                  <li>
-                    <input id="brand3" class="styled" type="checkbox" >
-                    <label for="brand3"> Asus <span>(283)</span> </label>
-                  </li>
-                  <li>
-                    <input id="brand4" class="styled" type="checkbox" >
-                    <label for="brand4">Samsung <span>(116)</span> </label>
-                  </li>
-                  <li>
-                    <input id="brand5" class="styled" type="checkbox" >
-                    <label for="brand5"> LG <span>(29)</span> </label>
-                  </li>
-                  <li>
-                    <input id="brand6" class="styled" type="checkbox" >
-                    <label for="brand6"> Electrolux <span>(179)</span> </label>
-                  </li>
-                  <li>
-                    <input id="brand7" class="styled" type="checkbox" >
-                    <label for="brand7"> Toshiba <span>(38)</span> </label>
-                  </li>
-                  <li>
-                    <input id="brand8" class="styled" type="checkbox" >
-                    <label for="brand8"> Sharp <span>(205)</span> </label>
-                  </li>
-                  <li>
-                    <input id="brand9" class="styled" type="checkbox" >
-                    <label for="brand9"> Sony <span>(35)</span> </label>
-                  </li>
-                </ul>
-              </div>
-              
-              <!-- Rating -->
-              <h6>Rating</h6>
-              <div class="rating">
-                <ul>
-                  <li><a href="#."><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i> <span>(218)</span></a></li>
-                  <li><a href="#."><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i> <span>(178)</span></a></li>
-                  <li><a href="#."><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i> <span>(79)</span></a></li>
-                  <li><a href="#."><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i> <span>(188)</span></a></li>
-                </ul>
-              </div>
-              
-              <!-- Colors -->
-              <h6>Size</h6>
-              <div class="sizes"> <a href="#.">S</a> <a href="#.">M</a> <a href="#.">L</a> <a href="#.">XL</a> </div>
-              
-              <!-- Colors -->
-              <h6>Colors</h6>
-              <div class="checkbox checkbox-primary">
-                <ul>
-                  <li>
-                    <input id="colr1" class="styled" type="checkbox" >
-                    <label for="colr1"> Red <span>(217)</span> </label>
-                  </li>
-                  <li>
-                    <input id="colr2" class="styled" type="checkbox" >
-                    <label for="colr2"> Yellow <span> (179) </span> </label>
-                  </li>
-                  <li>
-                    <input id="colr3" class="styled" type="checkbox" >
-                    <label for="colr3"> Black <span>(79)</span> </label>
-                  </li>
-                  <li>
-                    <input id="colr4" class="styled" type="checkbox" >
-                    <label for="colr4">Blue <span>(283) </span></label>
-                  </li>
-                  <li>
-                    <input id="colr5" class="styled" type="checkbox" >
-                    <label for="colr5"> Grey <span> (116)</span> </label>
-                  </li>
-                  <li>
-                    <input id="colr6" class="styled" type="checkbox" >
-                    <label for="colr6"> Pink<span> (29) </span></label>
-                  </li>
-                  <li>
-                    <input id="colr7" class="styled" type="checkbox" >
-                    <label for="colr7"> White <span> (38)</span> </label>
-                  </li>
-                  <li>
-                    <input id="colr8" class="styled" type="checkbox" >
-                    <label for="colr8">Green <span>(205)</span></label>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
+
           
           <!-- Products -->
-          <div class="col-md-9">
+          <div class="col-lg-12">
             <div class="product-detail">
               <div class="product">
                 <div class="row"> 
@@ -373,68 +226,8 @@
                 <div class="tab-content">
                   <div role="tabpanel" class="tab-pane fade in active" id="pro-detil"> 
                     <!-- List Details -->
-                    <ul class="bullet-round-list">
-                      <li>Power Smartphone 7s G930F 128GB International version - Silver</li>
-                      <li> 2G bands: GSM 850 / 900 / 1800 / 1900 3G bands: HSDPA 850 / 900 / 1900 / 2100 4G bands: LTE 700 / 800 / 850<br>
-                        900 / 1800 / 1900 / 2100 / 2600</li>
-                      <li> Dimensions: 142.4 x 69.6 x 7.9 mm (5.61 x 2.74 x 0.31 in) Weight 152 g (5.36 oz)</li>
-                      <li> IP68 certified - dust proof and water resistant over 1.5 meter and 30 minutes</li>
-                      <li> Internal: 128GB, 4 GB RAM </li>
-                    </ul>
-                    <div class="table-responsive">
-                      <table class="table">
-                        <thead>
-                          <tr>
-                            <th>Carrier</th>
-                            <th>Compatibility Rating </th>
-                            <th>Voice / Text </th>
-                            <th>Voice / Text </th>
-                            <th>2G Data </th>
-                            <th>3G Data </th>
-                            <th>4G LTE Data </th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td>AT&T </td>
-                            <td>Fully Compatible</td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"></td>
-                          </tr>
-                          <tr>
-                            <td>Sprint </td>
-                            <td>No Voice/Text and Partial Data Connection</td>
-                            <td class="text-center"></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                          </tr>
-                          <tr>
-                            <td>Q-Mobile </td>
-                            <td>Partial Data Connection</td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                          </tr>
-                          <tr>
-                            <td>Verizon Wireless </td>
-                            <td>No Votice/Text and Partial Data Connection</td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                            <td class="text-center"><i class="fa fa-check"></i></td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
+                    <p class="tags" th:text="${goodsdetails[0].goodsDsp}"></p>
+
                   <div role="tabpanel" class="tab-pane fade" id="cus-rev"></div>
                   <div role="tabpanel" class="tab-pane fade" id="ship"></div>
                 </div>
@@ -713,7 +506,7 @@
           <!-- Social Links -->
           <div class="social-links"> <a href="#."><i class="fa fa-facebook"></i></a> <a href="#."><i class="fa fa-twitter"></i></a> <a href="#."><i class="fa fa-linkedin"></i></a> <a href="#."><i class="fa fa-pinterest"></i></a> <a href="#."><i class="fa fa-instagram"></i></a> <a href="#."><i class="fa fa-google"></i></a> </div>
         </div>
-        
+
         <!-- Categories -->
         <div class="col-md-3">
           <h4>Categories</h4>
@@ -845,6 +638,8 @@
 
 </script>
 <!-- JavaScripts -->
+<script src="/js/vendors/jquery/jquery.min.js"></script>
+<script src="/js/index.js"></script>
 <script src="/MyInfoJs/GoodsHistory.js"></script>
 <script src="/js/vendors/jquery/jquery.min.js"></script>
 <script src="/js/vendors/wow.min.js"></script>
