更新了评论功能

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1217,7 +1217,7 @@ section {
 	margin-right: 10px;
 }
 .blog-post p {
-	font-weight: 14px;
+	font-weight: normal;
 }
 .blog-post a {
 	color: #0088cc;
